[package]
name = "tom_bot"
version = "0.1.0"
edition = "2021"
authors = ["Josiah Bull <josiah.bull7@gmail.com>"]

[dependencies]
chrono = { version = "0.4.23", features = ["clock"]}

rand = "0.8.5"

tokio = { version = "1", features = ["full"] }
serenity = { git="https://github.com/serenity-rs/serenity", branch="next", default-features = false, features = ["full"] }

# distance command
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.87"
fantoccini = "0.19.3"

# database
entity = { path = "entity" }
migration = { path = "migration" }
sea-orm = { version = "0.10.6", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "postgres-array" ] }

# config
lazy_static = "1.4.0"
toml = "0.5.10"

# logging
log = "0.4.17"
fern = "0.6.1"

[workspace]
members = [
    "migration",
    "entity"
]
