[package]
name = "tombot"
version = "0.1.0"
edition = "2021"
authors = ["Josiah Bull <josiah.bull7@gmail.com>"]

[dependencies]
chrono = { version = "0.4.24", features = ["clock"] }

rand = "0.8.5"

tokio = { version = "1", features = ["full"] }
serenity = { git="https://github.com/serenity-rs/serenity", rev="be431cf", default-features = false, features = ["full"] }

# distance command
reqwest = { version = "0.11.17", default-features = false, features = ["json", "serde_json", "tokio-rustls"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
fantoccini = { version = "0.19.3", default-features = false, features = ["rustls-tls"] }

# database
entity = { path = "entity" }
migration = { path = "migration" }
sea-orm = { version = "0.10.7", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "postgres-array"] }

# config
lazy_static = "1.4.0"
toml = "0.8.10"

# logging
log = "0.4.17"
fern = "0.6.2"

# healthcheck
warp = { version = "0.3.5", default-features = false, features = ["tokio-rustls"] }
small-fixed-array = "0.4.0"

[workspace]
members = [
    "migration",
    "entity"
]
